--- a/R-cheatsheet.tex
+++ b/R-cheatsheet.tex
@@ -315,172 +315,145 @@ Muchas funciones matemáticas tienen el parámetro lógico \code{na.rm=FALSE} pa
 
 
 
-\section{Advanced data processing}
+\section{Procesamiento de datos avanzado}
 \everypar={\hangindent=9mm}
 
-\bcode{apply(X,INDEX,FUN=)} a vector or array or list of values obtained by applying a
-     function \code{FUN} to margins (\code{INDEX}) of \code{X}
+\bcode{apply(X,INDEX,FUN=)} aplica la function \code{FUN} a las filas o culumnas (\code{INDEX}) de \code{X}
 
-\bcode{lapply(X,FUN)} apply \code{FUN} a cada elemento de la lista \code{X}
+\bcode{lapply(X,FUN)} aplica \code{FUN} a cada elemento de la lista \code{X}
 
-\bcode{merge(a,b)} merge two data frames by common columns or row names
+\bcode{by(data, INDEX, FUN)} aplica \code{FUN} a cada uno de los elementos clasificados por \code{INDEX} del data frame \code{data} 
+
+\bcode{merge(a,b)} fusiona dos data frames por columnas o nombres de filas comunes
 
 
 
 
-\section{Strings}
+\section{Cadenas}
 \everypar={\hangindent=9mm}
 
-\bcode{paste(...)} concatenate vectors after converting to character;
-\code{sep=} is the string to separate terms (a single space is the default);
-\code{collapse=} is an optional string to separate ``collapsed'' results
+\bcode{paste(...)} concatena vectores convirtiéndolos en caracteres;
+\code{sep=} es la cadena que separa los términos (el separador por defecto es el espacio en blanco);
+\code{collapse=} cadena opcional, que separa los componentes concatenados
 
-\bcode{substr(x,start,stop)} substrings in a character vector; can also assign, as \code{substr(x, start, stop) <- value}
+\bcode{substr(x,start,stop)} extrae subcadenas de un vector de caracteres; también puede utilizarse en asignación, modificando la subcadena original, \code{substr(x, start, stop) <- value}
 
-\bcode{strsplit(x,split)} split \code{x} according to the substring \code{split}
+\bcode{strsplit(x,split)} divide \code{x} en campos según la cadena \code{split}
 
-\bcode{grep(pattern,x)} searches for matches to \code{pattern}
-     within \code{x}; see \code{?regex}
+\bcode{grep(pattern,x)} localiza el patron \code{pattern}
+     en \code{x} y devuelve las posiciones del vector donde aparece; see \code{?regex}
 
-\bcode{gsub(pattern,replacement,x)} replacement of matches determined by
-regular expression matching \code{sub()} is the same but only
-replaces the first occurrence. 
+\bcode{gsub(pattern,replacement,x)} sustituye todas las coincidencias en \code{x} que verifican un patron; \code{sub()} id. pero sustituye solo la primera coincidencia  
 
-\bcode{tolower(x)} convert to lowercase
+\bcode{tolower(x)} convierte mayúsculas en minúsculas
 
-\bcode{toupper(x)} convert to uppercase
+\bcode{toupper(x)} convierte minúsculas en mayúsculas
 
-\bcode{match(x,table)} a vector of the positions of first matches for the elements of \code{x} among \code{table}
+\bcode{match(x,table)} devuelve un vector con las posiciones de las primeras coincidencias de \code{x} en \code{table}
 
-\bcode{x \%in\% table} id. but returns a logical vector 
+\bcode{x \%in\% table} id. pero devuelve un vector lógico
 
-\bcode{pmatch(x,table)} partial matches for the elements of \code{x} among \code{table}
-
-\bcode{nchar(x)} number of characters
+\bcode{nchar(x)} número de caracteres
 
 
-\section{\color[rgb]{1,0.54902,0}Dates and Times}
 
-The class \code{Date} has dates without times.  \code{POSIXct} has
-dates and times, including time zones. Comparisons (e.g. $>$),
-\code{seq()}, and \code{difftime()} are useful.
+
+\section{Gráficos}
 
 \everypar={\hangindent=9mm}
 
-\bcode{as.Date(s)} and \bcode{as.POSIXct(s)} convert to the respective
-class; \code{format(dt)} converts to a string representation. The
-default string format is ``2001-02-21''. These accept a second argument
-to specify a format for conversion. Some common formats are:
+\bcode{plot(x)}  representación de los valores de \code{x} (en el eje $y$) ordenados en el eje $x$
 
-  \describe{
-\itemsep=0pt\parskip=0pt
-    \item{\code{\%a}, \code{\%A}} {Abbreviated and full weekday name.}
-    \item{\code{\%b}, \code{\%B}} {Abbreviated and full month name.}
-    \item{\code{\%d}} {Day of the month (01--31).}
-    \item{\code{\%H}} {Hours (00--23).}
-    \item{\code{\%I}} {Hours (01--12).}
-    \item{\code{\%j}} {Day of year (001--366).}
-    \item{\code{\%m}} {Month (01--12).}
-    \item{\code{\%M}} {Minute (00--59).}
-    \item{\code{\%p}} {AM/PM indicator. }
-    \item{\code{\%S}} {Second as decimal number (00--61).}
-    \item{\code{\%U}} {Week (00--53); the first Sunday as day 1 of week 1.}
-    \item{\code{\%w}} {Weekday (0--6, Sunday is 0).}
-    \item{\code{\%W}} {Week (00--53); the first Monday as day 1 of week 1.}
-    \item{\code{\%y}} {Year without century (00--99). Don't use.}
-    \item{\code{\%Y}} {Year with century.}
-    \item{\code{\%z}} {(output only.) Offset from Greenwich; \code{-0800} is 8 hours west of.}
-    \item{\code{\%Z}} {(output only.) Time zone as a character
-      string (empty if not available).}
-  }
+\bcode{plot(x, y)}  gráfico bivariado de \code{x} (en el eje $x$) e \code{y} (en el eje $y$)
 
-Where leading zeros are shown they will be used on output but are
-optional on input. See \code{?strftime}.  
+\bcode{hist(x)}  histograma de frecuencias de \code{x}
+
+\bcode{barplot(x)}  histograma de los valores de \code{x}; usa
+\code{horiz=FALSE} para barras horizontales
+
+\bcode{pie(x)}  gráfico circular (o de sectores)
+
+\bcode{boxplot(x)}  diagrama de cajas (box-and-whiskers)
+
+\bcode{pairs(x)} si \code{x} es una matriz o un data frame, dibuja todas las posibles gráficas bivariadas entre las columnas de \code{x}
+
+\bcode{qqnorm(x)} cuantiles de \code{x} con respecto a los valores esperados bajo una distribución normal
+
+\bcode{qqplot(x, y)}  cuantiles de \code{y} frente a los cuantiles de \code{x}
 
 
+Los parametros por defectos son comunes a muchas funciones gráficas:
+
+\bcode{type="p"}  especifica el tipo de gráfico, \code{"p"}: puntos, \code{"l"}: líneas, \code{"b"}: puntos conectados por líneas, \code{"o"}: id. pero las líneas están sobre los puntos, \code{"h"}: líneas verticales, \code{"s"}: escaleras, los datos se representan como la parte superior de las líneas verticales, \code{"S"}: id. pero los datos se representan como la parte inferior de las líneas verticales
+
+\bcode{xlim=, ylim=}  especifica los límites inferiores y superiores de los ejes, por ejemplo con \code{xlim=c(1, 10)} o \code{xlim=range(x)}
+
+\bcode{xlab=, ylab=}  títulos de los ejes, deben ser variables de tipo caracter
+
+\bcode{main=}  título principal, debe ser una variable de tipo caracter
+
+\bcode{sub=}  sub-título (escrito en letra más pequeña)
 
 
 
-\section{Plotting}
+
+\section{Comandos de graficación de bajo nivel}
+\everypar={\hangindent=9mm}
+
+\bcode{points(x, y)}  añade puntos (se puede usar la opción \code{type=})
+
+\bcode{lines(x, y)}  id. pero con líneas
+
+\bcode{text(x, y, \mbox{labels}, ...)}  añade el texto \code{labels} en las coordenadas (\code{x},\code{y}); un uso típico es: \code{plot(x, y, type="n"); text(x, y, names)}
+
+\bcode{abline(a,b)} dibuja una línea con pendiente \code{b} e intercepto \code{a}
+
+\bcode{abline(h=y)}  dibuja una línea horizontal en la ordenada \code{y}
+
+\bcode{abline(v=x)}  dibuja una línea vertical en la abcisa \code{x}
+
+\bcode{abline(lm.obj)}  dibuja una línea de regresión dada por \code{lm.obj}
+
+\bcode{rect(x1, y1, x2, y2)} dibuja un rectángulo cuyas esquinas izquierda, derecha, superior e inferior son \code{x1, x2, y1, y2}, respectivamente
+
+\bcode{polygon(x, y)} dibuja un polígono uniendo los puntos con coordenadas dadas por \code{x} e \code{y}
+
+\bcode{legend(x, y, legend)}  añade la legenda en el punto (\code{x},\code{y}) con los símbolos dados por \code{legend}
+
+\bcode{title()}  añade un título y opcionalmente un sub-título
+
+
+
+
+\section{Parámetros gráficos}
+
+Se pueden modificar los valores de los parámetros globales mediante la función \bcode{par(...)}; muchos de ellos pueden pasarse como parámetros a los comandos de graficación.
 
 \everypar={\hangindent=9mm}
 
-\bcode{plot(x)}  plot of the values of \code{x} (on the $y$-axis) ordered on the $x$-axis
+\bcode{adj} justificación del texto (\code{0} justificado a la izquierda, \code{0.5} centrado,  \code{1} justificado a la derecha)
 
-\bcode{plot(x, y)}  bivariate plot of \code{x} (on the $x$-axis) and \code{y} (on the $y$-axis)
+\bcode{bg}  especifica el color del fondo (ej. : \code{bg="red"}, \code{bg="blue"}, \ldots{} la lista con los 657 colores disponibles se puede ver con \code{colors()})
 
-\bcode{hist(x)}  histogram of the frequencies of \code{x}
+\bcode{cex} valor que controla el tamaño del texto y los símbolos con respecto al valor por defecto; los siguientes parámetros tienen el mismo control para números en los ejes, \code{cex.axis}, títulos de los ejes, \code{cex.lab}, título principal, \code{cex.main} y sub-título, \code{cex.sub}
 
-\bcode{barplot(x)}  histogram of the values of \code{x}; use
-\code{horiz=FALSE} for horizontal bars
+\bcode{col}  color de símbolos y líneas; usa los nombres de colores:
+\code{"red"}, \code{"blue"} ver \code{colors()} o \code{"\#RRGGBB"};
+ver \code{rgb()}, \code{hsv()}, \code{gray()}, y \code{rainbow()}; como en \code{cex} estos son: \code{col.axis}, \code{col.lab}, \code{col.main}, \code{col.sub}
 
-\bcode{pie(x)}  circular pie-chart
+\bcode{font}  entero que controla el estilo del texto (\code{1}: normal, \code{2}: cursiva, \code{3}: negrita, \code{4}: negrita cursiva); como en \code{cex} estos son: \code{font.axis}, \code{font.lab}, \code{font.main}, \code{font.sub}
 
-\bcode{boxplot(x)}  ``box-and-whiskers'' plot
+\bcode{lty}  controla el tipo de las líneas, puede ser un entero o un caracter (\code{1}: \code{"sólida"}, \code{2}: \code{"discontinua"}, \code{3}: \code{"punteada"}, \code{4}: \code{"punto-línea"}, \code{5}: \code{"línea larga-corta"}, \code{6}: \code{"línea corta-corta"}, o una cadena de hasta 8 caracteres (entre \code{"0"} y \code{"9"}) que especifican de forma alternativa la longitúd en puntos o pixeles, de los elementos dibujados y los blancos, por ejemplo \code{lty="44"} tendrá el mismo efecto que \code{lty=2}
 
-\bcode{qqplot(x, y)}  quantiles of \code{y} with respect to the quantiles of \code{x}
+\bcode{lwd}  valor numérico que controla la anchura de la línea, por defecto \code{1}
 
+\bcode{mar} vector numéricos de 4 elementos, de la forma \code{c(bottom, left, top, right)}, que controla el espacio entre los ejes y el borde del gráfico; los valores por defecto son \code{c(5.1, 4.1, 4.1, 2.1)}
 
-The following parameters are common to many plotting functions:
+\bcode{mfcol} Vector de la forma \code{c(nr,nc)} que divide la ventana gráfica como una matriz con \code{nr} filas y \code{nc} columnas; las gráficas se dibujan en las columnas
 
-\bcode{type="p"}  specifies the type of plot, \code{"p"}: points, \code{"l"}: lines, \code{"b"}: points connected by lines, \code{"o"}: id. but the lines are over the points, \code{"h"}: vertical lines, \code{"s"}: steps, the data are represented by the top of the vertical lines, \code{"S"}: id. but the data are represented by the bottom of the vertical lines
+\bcode{mfrow} id. pero las gráficas se dibujan por filas
 
-\bcode{xlim=, ylim=}  specifies the lower and upper limits of the axes, for example with \code{xlim=c(1, 10)} or \code{xlim=range(x)}
-
-\bcode{xlab=, ylab=}  annotates the axes, must be variables of mode character
-
-\bcode{main=}  main title, must be a variable of mode character
-
-\bcode{sub=}  sub-title (written in a smaller font)
-
-
-
-
-\section{Low-level plotting commands}
-\everypar={\hangindent=9mm}
-
-\bcode{points(x, y)}  adds points (the option \code{type=} can be used)
-
-\bcode{lines(x, y)}  id. but with lines
-
-\bcode{text(x, y, \mbox{labels}, ...)}  adds text given by \code{labels} at coordinates (\code{x},\code{y}); a typical use is: \code{plot(x, y, type="n"); text(x, y, names)}
-
-\bcode{abline(a,b)}  draws a line of slope \code{b} and intercept \code{a}
-
-\bcode{abline(h=y)}  draws a horizontal line at ordinate \code{y}
-
-\bcode{abline(v=x)}  draws a vertical line at abcissa \code{x}
-
-\bcode{abline(lm.obj)}  draws the regression line given by \code{lm.obj}
-
-\bcode{legend(x, y, legend)}  adds the legend at the point (\code{x},\code{y}) with the symbols given by \code{legend}
-
-\bcode{title()}  adds a title and optionally a sub-title
-
-
-
-
-\section{Graphical parameters}
-
-These can be set globally with \bcode{par(...)}; many can be passed as
-parameters to plotting commands.
-
-\everypar={\hangindent=9mm}
-
-\bcode{bg}  specifies the colour of the background (ex. : \code{bg="red"}, \code{bg="blue"}, \ldots{} the list of the 657 available colours is displayed with \code{colors()})
-
-\bcode{col}  controls the color of symbols and lines; use color names:
-\code{"red"}, \code{"blue"} see \code{colors()} or as \code{"\#RRGGBB"};
-see \code{rgb()}, \code{hsv()}, \code{gray()}, and \code{rainbow()}; as for \code{cex} there are: \code{col.axis}, \code{col.lab}, \code{col.main}, \code{col.sub}
-
-\bcode{font}  an integer which controls the style of text (\code{1}: normal, \code{2}: italics, \code{3}: bold, \code{4}: bold italics); as for \code{cex} there are: \code{font.axis}, \code{font.lab}, \code{font.main}, \code{font.sub}
-
-\bcode{lty}  controls the type of lines, can be an integer or string (\code{1}: \code{"solid"}, \code{2}: \code{"dashed"}, \code{3}: \code{"dotted"}, \code{4}: \code{"dotdash"}, \code{5}: \code{"longdash"}, \code{6}: \code{"twodash"}, or a string of up to eight characters (between \code{"0"} and \code{"9"}) which specifies alternatively the length, in points or pixels, of the drawn elements and the blanks, for example \code{lty="44"} will have the same effect than \code{lty=2}
-
-\bcode{lwd}  a numeric which controls the width of lines, default \code{1}
-
-\bcode{pch}  controls the type of symbol, either an integer between 1
-and 25, or any single character within \code{""}
+\bcode{pch}  tipo de símbolo, puede ser un entero entre 1 y 25, o cualquier caracter único entre \code{""}
 
 \samepage\includegraphics[width=8.5cm]{files/pch_symbol} 
 
@@ -488,68 +461,49 @@ and 25, or any single character within \code{""}
 
 
 
-
-\section{Lattice (Trellis) graphics}
-\everypar={\hangindent=9mm}
-
-\bcode{densityplot(\~{}x)}  density functions plot
-
-\bcode{histogram(\~{}x)}  histogram of the frequencies of \code{x}
-
-\bcode{qq(y\~{}x)}  quantiles to compare two distributions, \code{x} must be numeric, \code{y} may be numeric, character, or factor but must have two `levels'
-
-
-
-
-
-\section{Optimization and model fitting}
+\section{Optimización y ajuste del modelo}
 \everypar={\hangindent=9mm}
 
 
-\bcode{lm(formula)} fit linear models; \code{formula} is typically of
-     the form \code{response ~ termA + termB + ...}; use \code{I(x*y)
-     + I(x\^{}2)} for terms made of nonlinear components
+\bcode{lm(formula)} ajusta un modelo de regresión lineal; \code{formula} es típicamente de la forma \code{response ~ termA + termB + ...}
 
-\bcode{glm(formula,family=)} fit generalized linear models, specified by
-     giving a symbolic description of the linear predictor and a
-     description of the error distribution; \code{family} is a
-     description of the error distribution and link function to
-          be used in the model; see \code{?family}
+\bcode{glm(formula,family=)} ajusta un modelo lineal generalizado; \code{family} es la descripción de la distribución del error y función de enlace para ser usada en el modelo; ver \code{?family}
 
 
 \everypar={\hangindent=9mm}
-\bcode{coef(fit)}  returns the estimated coefficients (sometimes with their standard-errors)
 
-\bcode{residuals(fit)}  returns the residuals
+\bcode{coef(fit)}  devuelve los coeficientes estimados (a veces con sus errores estándar)
 
-\bcode{deviance(fit)}  returns the deviance
+\bcode{residuals(fit)}  devuelve los residuales
+
+\bcode{deviance(fit)}  devuelve la suma de cuadrados residual
+
+\bcode{fitted(fit)} devuelve los valores ajustados
+
+\bcode{AIC(fit)} calcula el criterio de información de Akaike o AIC
 
 
 
-
-\section{Statistics}
+\section{Estadísticos}
 \everypar={\hangindent=9mm}
 
-\bcode{aov(formula)} analysis of variance model
+\bcode{aov(formula)} análisis de varianza
 
-\bcode{anova(fit,...)} analysis of variance (or deviance) tables for one or more
-     fitted model objects
-
-\bcode{density(x)} kernel density estimates of \code{x}
+\bcode{anova(fit,...)} tabla de análisis de varianza (o devianza) de uno o más modelos lineales ajustados
 
 \bcode{binom.test()}, \bcode{pairwise.t.test()}, \bcode{power.t.test()},
-\bcode{prop.test()}, \bcode{t.test()}, ... use
+\bcode{prop.test()}, \bcode{t.test()}, ... usa
 \code{help.search("test")} 
 
 
 
 
 
-\section{Distributions}
+\section{Distribuciones}
 
-\bcode{rnorm(n, mean=0, sd=1)} Gaussian (normal)  
+\bcode{rnorm(n, mean=0, sd=1)} Gaussiana (normal)  
 
-\bcode{rexp(n, rate=1)} exponential
+\bcode{rexp(n, rate=1)} exponencial
 
 \bcode{rgamma(n, shape, scale=1)} gamma  
 
@@ -569,31 +523,28 @@ and 25, or any single character within \code{""}
 
 \bcode{rbinom(n, size, prob)} binomial  
 
-\bcode{rgeom(n, prob)} geometric  
+\bcode{rgeom(n, prob)} geométrica  
 
-\bcode{rhyper(nn, m, n, k)} hypergeometric  
+\bcode{rhyper(nn, m, n, k)} hypergeométrica  
 
-\bcode{rlogis(n, location=0, scale=1)} logistic  
+\bcode{rlogis(n, location=0, scale=1)} logística  
 
 \bcode{rlnorm(n, meanlog=0, sdlog=1)} lognormal  
 
-\bcode{rnbinom(n, size, prob)} negative binomial  
+\bcode{rnbinom(n, size, prob)} binomial negativa
 
-\bcode{runif(n, min=0, max=1)} uniform  
+\bcode{runif(n, min=0, max=1)} uniforme  
 
-\bcode{rwilcox(nn, m, n)}, \code{rsignrank(nn, n)} Wilcoxon's statistics  
+\bcode{rwilcox(nn, m, n)}, \code{rsignrank(nn, n)} estadístico de Wilcoxon  
 
-All these functions can be used by replacing the letter \code{r} with
-\code{d}, \code{p} or \code{q} to get, respectively, the probability
-density (\code{d\textsl{func}(x, ...)}), the cumulative probability
-density (\code{p\textsl{func}(x, ...)}), and the value of quantile
-(\code{q\textsl{func}(p, ...)}, with 0 $<$ \code{p} $<$ 1).
+Todas estas funciones pueden ser usadas, sustituyendo el caracter \code{r} por
+\code{d}, \code{p} o \code{q} para obtener, la densidad de probabilidad (\code{d\textsl{func}(x, ...)}), la densidda de probabilidad acumulada (\code{p\textsl{func}(x, ...)}), y el valor del cuartil (\code{q\textsl{func}(p, ...)}, con 0 $<$ \code{p} $<$ 1).
 
 
-\section{Programming}
+\section{Programación}
 \everypar={\hangindent=9mm}
 
-\bcode{function( arglist ) expr} function definition
+\bcode{function( arglist ) expr} definición de funciones
 
 \bcode{return(value)}
 
@@ -605,12 +556,12 @@ while(cond) expr\\
 break\\
 next}
 
-Use braces \{\} around statements
+Utiliza llaves \{\} alrededor de las declaraciones
 
 
 \everypar={\hangindent=9mm}
-\bcode{ifelse(test, yes, no)} a value with the same shape as \code{test} filled with elements
-from either \code{yes} or \code{no} 
+\bcode{ifelse(test, yes, no)} versión vectorizada de la estructura condicional \code{if/else}
+
 
 
 \end{multicols*}
